[package]
name = "massa-sc-runtime"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
as-ffi-bindings = { git = "https://github.com/massalabs/as-ffi-bindings.git", tag = "v0.5.5" }
base64 = "=0.21"
chrono = { version = "=0.4", features = ["clock"], default-features = false }
displaydoc = "0.2"
function_name = "0.3"
loupe = "0.1"
massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs.git", rev = "38950875a7aa406fedc4f0b8336864e5ff290f2c" }
more-asserts = "0.3"
num_enum = "0.7"
parking_lot = "0.12"
prost = "=0.12"
prost-types = "=0.12"
rand = "=0.8"
# for gas_calibration middleware
regex = "1"
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
serial_test = "2"
sha2 = "=0.10.8"
sha3 = "=0.10.8"
thiserror = "1.0"
tracing = "0.1"
wasmer = { version = "=4.2.4", features = ["static-artifact-create"] }
wasmer-compiler-cranelift = "=4.2.4"
wasmer-compiler-singlepass = "=4.2.4"
wasmer-middlewares = "=4.2.4"
wasmer-types = "=4.2.4"
rust_decimal = { version = "1.32", default-features = false, optional = true }

[dev-dependencies]
bs58 = { version = "=0.5.0", features = ["check"] }

[build-dependencies]
serde = "=1.0"
serde_json = "=1.0"
which = "5"

[features]
gas_calibration = []
testing = []
dumper = []
build-wasm = []
execution-trace = ["rust_decimal"]
