[package]
name = "massa-sc-runtime"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
as-ffi-bindings = { git = "https://github.com/massalabs/as-ffi-bindings.git", branch = "feature/update_wasmer_4_3_4" }
base64 = "=0.21"
chrono = { version = "=0.4", features = ["clock"], default-features = false }
displaydoc = "0.2"
function_name = "0.3"
loupe = "0.1"
massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs.git", branch = "mainnet_2_6" }
more-asserts = "0.3"
num_enum = "0.7"
parking_lot = "0.12"
prost = "=0.13"
prost-types = "=0.13"
rand = "=0.8"
# for gas_calibration middleware
regex = "1"
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
serial_test = "2"
sha2 = "=0.10.8"
sha3 = "=0.10.8"
thiserror = "1.0"
tracing = "0.1"
wasmer = { version = "=4.3.6", features = ["static-artifact-create"] }
wasmer-compiler-cranelift = "=4.3.6"
wasmer-compiler-singlepass = "=4.3.6"
wasmer-middlewares = "=4.3.6"
wasmer-types = "=4.3.6"
rust_decimal = { version = "1.32", default-features = false, optional = true }

[dev-dependencies]
bs58 = { version = "=0.5.0", features = ["check"] }
sysinfo = "0.31"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
# winapi dep for num-format dependency to compile, see from: https://github.com/bcmyers/num-format/issues/43
winapi = { version = "0.3.9", features = ["errhandlingapi"] }

[build-dependencies]
serde = "=1.0"
serde_json = "=1.0"
which = "5"

[features]
gas_calibration = []
testing = []
dumper = []
build-wasm = []
execution-trace = ["rust_decimal"]
